--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest --bail"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,15 @@
   },
   "homepage": "https://github.com/AnnAErmak/frontend-project-lvl2#readme",
   "dependencies": {
+    "@jest/globals": "^27.5.1",
     "commander": "^9.0.0",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1",
+    "jest-cli": "^27.5.1"
   }
 }
