--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   "dependencies": {
     "@jest/globals": "^27.5.1",
     "commander": "^9.0.0",
-    "eslint": "^8.10.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1"
   }
