--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,3 +16,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: make install
       - run: make lint
+      - run: make test
