--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "gendiff",
-  "main": "src/genDiff.js",
+  "main": "./src/main.js",
   "type": "module",
   "bin": {
     "gendiff": "bin/gendiff.js"
